[package]
name = "servy"
version = "2.0.0"
edition = "2018"
authors = ["zethra <jediben97@gmail.com>"]
description = "A tiny little web server"
homepage = "https://github.com/zethra/servy"
repository = "https://github.com/zethra/servy"
readme = "README.md"
keywords = ["web", "server", "hyper", "tokio", "tiny"]
categories = ["command-line-utilities"]
license = "Apache-2.0/MIT"

[badges]
appveyor = { repository = "zethra/servy", branch = "master", service = "github" }
travis-ci = { repository = "zethra/servy", branch = "master" }

[dependencies]
smol = "0.1"
anyhow = "1.0"
async-h1 = "1.1"
futures = "0.3"
num_cpus = "1.13"
piper = "0.1"
async-native-tls = "0.3"
http-types = "1.2"

[profile.release]
lto = true
